// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`a complex selector toJSON with a leading combinator 1`] = `
{
  "inputs": [
    {
      "css": "+ .foo {}",
      "hasBOM": false,
      "id": "<input css _____>",
    },
  ],
  "leadingCombinator": "+",
  "nodes": [
    <.foo>,
  ],
  "raws": {},
  "sassType": "complex-selector",
  "source": <1:1-1:8 in 0>,
}
`;

exports[`a complex selector toJSON with no leading combinator 1`] = `
{
  "inputs": [
    {
      "css": ".foo .bar {}",
      "hasBOM": false,
      "id": "<input css _____>",
    },
  ],
  "nodes": [
    <.foo>,
    <.bar>,
  ],
  "raws": {},
  "sassType": "complex-selector",
  "source": <1:1-1:11 in 0>,
}
`;
